prevent infoCard from forcing horizontal scroll on mobile homepage

--- a/style/modules/infoCard.css
+++ b/style/modules/infoCard.css
@@ -44,7 +44,6 @@
 
 @media only screen and (max-width: 600px) {
     .infoCard {
-        min-width: 350px;
         flex-direction: column;
     }
 
